Fix background image on IE

--- a/src/assets/scss/meet.scss
+++ b/src/assets/scss/meet.scss
@@ -10,7 +10,8 @@
   }
 
   @media (min-width: $sm) and (min-resolution: 1dppx), 
-         (min-width: $sm) and (-webkit-min-device-pixel-ratio: 1) {
+         (min-width: $sm) and (-webkit-min-device-pixel-ratio: 1),
+         (min-width: $sm) {
     background-image: url("../images/girl-playing-table-wide-responsive.jpg");
   }
 
